# ci-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yaml  pyproject.toml
.github/: labeler.yml
.github/k8s-ci/: kustomization.yaml
.github/scripts/: issue_triage.py
.github/workflows/: auto-label.yml  ci.yml  issue-triage.yml  release.yml  stale.yml  welcome.yml
deploy/k8s/: backend.yaml  configmap.yaml  frontend.yaml  ingress.yaml  kustomization.yaml  langfuse.yaml  namespace.yaml  pvc.yaml  secret.yaml
docs/: README.md  design.md  roadmap.md
docs/design/: architecture.md  failure-triage.md  skill-system.md  webhook.md
docs/guides/: usage-guide.md
docs/guides/en/: deployment.md  langfuse-setup.md  usage-guide.md
docs/guides/zh/: deployment.md  langfuse-setup.md  tui-guide.md  usage-guide.md
docs/operations/: deployment.md
docs/plans/: 2026-04-09-skill-system.md
docs/superpowers/plans/: 2026-04-17-issue-triage-bot.md  2026-04-22-tui.md  2026-04-24-chat-tool-use.md  2026-04-24-chat-write-tools.md  2026-04-24-tui-parity.md  2026-04-25-tui-setup-wizard.md
docs/superpowers/specs/: 2026-04-16-issue-triage-bot-design.md  2026-04-22-tui-design.md
skills/cost/: SKILL.md
skills/efficiency/: SKILL.md
skills/errors/: SKILL.md
skills/failure-triage/: SKILL.md
skills/security/: SKILL.md
src/ci_optimizer/: __init__.py  cli.py  config.py  filters.py  github_client.py  log_extractor.py  prefetch.py  resolver.py
tests/: conftest.py  test_api.py  test_auth.py  test_cache.py  test_chat_e2e.py  test_chat_tools.py  test_chat_write.py  test_config.py  test_db.py  test_diagnose_api.py  test_diagnose_crud.py  test_e2e.py  test_filters.py  test_formatter.py  test_github_client.py  test_integration.py  test_issue_triage.py  test_log_extractor.py  test_prefetch.py  test_resolver.py  test_resolver_timeout.py  test_skill_registry.py  test_skill_system.py  test_tools.py  test_webhook.py
tests/tui/: test_app_sse.py  test_commands.py  test_context.py  test_panels.py  test_setup.py
web/: .env.local.example  .gitignore  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
web/e2e/: frontend.spec.ts
(+70 files in other folders)
