[project]
name = "ci-agent"
version = "0.1.0"
description = "AI Agent for analyzing and optimizing GitHub CI pipelines"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.48",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "langfuse>=2.0.0",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
]

[project.scripts]
ci-agent = "ci_optimizer.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E402",   # module-level imports not at top — intentional (lazy / after logger)
    "E501",   # line too long — handled by ruff format
    "F821",   # undefined name in string annotations — resolved at runtime
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]  # unused variables OK in tests
